--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.1",
+    "material-design-icons-iconfont": "^5.0.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-simple-search-dropdown": "^1.0.1",
