--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":  "ots-hr",
+  "name": "ots-hr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,13 +11,16 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cors": "^2.8.5",
     "jquery": "^3.5.1",
     "material-design-icons-iconfont": "^5.0.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-simple-search-dropdown": "^1.0.1",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1",
+    "xlsx": "^0.16.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
