--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "material-design-icons-iconfont": "^5.0.1",
     "popper.js": "^1.16.1",
