--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "homepage": "https://github.com/binibakshi/Vue.git",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "clean-source": "rimraf README.md src webroot package.json",
+    "deploy": "gh-pages-deploy -- 'A commit for deploy :)'",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -17,7 +17,6 @@
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "gh-pages": "3.1.0",
     "jquery": "^3.5.1",
     "material-design-icons-iconfont": "^5.0.1",
     "popper.js": "^1.16.1",
