--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "html2pdf.js": "^0.9.2",
     "jquery": "^3.5.1",
+    "jspdf": "^2.1.1",
     "material-design-icons-iconfont": "^5.0.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.12",
@@ -22,6 +24,7 @@
     "vue-simple-search-dropdown": "^1.0.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1",
     "xlsx": "^0.16.7"
   },
   "devDependencies": {
